--- a/index.html
+++ b/index.html
@@ -9,15 +9,16 @@
 </head>
 
 <BODY><script type="text/javascript" src ="scripts/jquery-3.3.1.js"></script>
-  <ul class="menu" >
+ <!-- <ul class="menu" >
       <li class="menu-item"><a href="Home.html">Home</a></li>
       <li class="menu-item"><a href="Animals.html">Animals</a></li>
       <li class="menu-item"><a href="Activities.html">Activities </a></li>
       <li class="menu-item"><a href="Accommodations.html">Accommodations</a></li>
       <li class="menu-item"><a href="Products.html">Products</a></li>
-  </ul>
+  </ul> -->
 </header>
-    <DIV>The Gregg Farm</DIV>
-    <div>The Gregg Farm was founded in the late 1700 hundreds.  It has been occupied continuosly since it started, although the acreage has shrunk over the years. The farm has a menagerie of animals, a sawmill and woodshop, and produces maple syrup every year.</div>  </BODY>
+    <div>Laura's coaching page</div>
+    <div>Some text here
+    </div>  </BODY>
 </body>
     </html>
