--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<link rel="stylesheet" type="text/css" href="css/Farm.css"></link>
+<link rel="stylesheet" type="text/css" href="css/Coaching.css"></link>
 <link rel="stylesheet" type="text/css" href="css/bootstrap.css"></link>
 
 <script type="text/javascript" src ="scripts/Farm.js"></script>
