--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <head>
 <link rel="stylesheet" type="text/css" href="css/Coaching.css"></link>
 <link rel="stylesheet" type="text/css" href="css/bootstrap.css"></link>
-
+<script type="text/javascript" src ="scripts/jquery-3.3.1.js"></script>
 <script type="text/javascript" src ="scripts/Farm.js"></script>
 <script type="text/javascript" src ="scripts/bootstrap.bundle.js"></script>
 
 </head>
 
-<BODY><script type="text/javascript" src ="scripts/jquery-3.3.1.js"></script>
+<BODY>
  <!-- <ul class="menu" >
       <li class="menu-item"><a href="Home.html">Home</a></li>
       <li class="menu-item"><a href="Animals.html">Animals</a></li>
