--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 </head>
 
 <BODY>
- <!-- <ul class="menu" >
-      <li class="menu-item"><a href="Home.html">Home</a></li>
-      <li class="menu-item"><a href="Animals.html">Animals</a></li>
-      <li class="menu-item"><a href="Activities.html">Activities </a></li>
-      <li class="menu-item"><a href="Accommodations.html">Accommodations</a></li>
-      <li class="menu-item"><a href="Products.html">Products</a></li>
-  </ul> -->
+    <ul class="menu" >
+        <li class="menu-item"><a href="index.html">Home</a></li>
+        <li class="menu-item"><a href="about.html">About</a></li>
+     <!--   <li class="menu-item"><a href="Activities.html">Activities </a></li>
+        <li class="menu-item"><a href="Accommodations.html">Accommodations</a></li>
+        <li class="menu-item"><a href="Products.html">Products</a></li>  -->
+    </ul> 
 </header>
     <div>Laura's coaching page</div>
     <div>Some text here
