--- a/laura.html
+++ b/laura.html
@@ -11,11 +11,13 @@
 <body class="aboutBody">
     <header>
             <div class="text-center">
-                    <img class ="aboutBanner text-center" src="\images\test.jpg" alt="About Banner">
+                    <img class ="aboutBanner text-center" src="\images\Coachingcertifiedlogo.jpg" alt="About Banner">
                     </div>
   <ul class="menu" >
-      <li class="menu-item"><a href="index.html">Home</a></li>
-      <li class="menu-item"><a href="about.html">About</a></li>
+      <li class="menu-item"><a href="index.html">What is Whole30?</a></li>
+      <li class="menu-item"><a href="laura.html">Why work with Laura?</a></li>
+      <li class="menu-item"><a href="coaching.html">Coaching Packages</a></li>
+      <li class="menu-item"><a href="contact.html">Contact</a></li>
    <!--   <li class="menu-item"><a href="Activities.html">Activities </a></li>
       <li class="menu-item"><a href="Accommodations.html">Accommodations</a></li>
       <li class="menu-item"><a href="Products.html">Products</a></li>  -->
