--- a/laura.html
+++ b/laura.html
@@ -11,8 +11,9 @@
 <body class="aboutBody">
     <header>
             <div class="text-center">
-                    <img class ="aboutBanner text-center" src="\images\Coachingcertifiedlogo.jpg" alt="About Banner">
+                    <img class ="aboutBanner text-center" src="\images\Coachingcertifiedlogo.jpg" alt="Whole 30">
                     </div>
+                    <div class="text-center">
   <ul class="menu" >
       <li class="menu-item"><a href="index.html">What is Whole30?</a></li>
       <li class="menu-item"><a href="laura.html">Why work with Laura?</a></li>
@@ -22,6 +23,7 @@
       <li class="menu-item"><a href="Accommodations.html">Accommodations</a></li>
       <li class="menu-item"><a href="Products.html">Products</a></li>  -->
   </ul> 
+  </div>
 </header>
     <div>Laura's coaching page</div>
     <div>Some text here
