--- a/index.html
+++ b/index.html
@@ -9,15 +9,26 @@
 </head>
 
 <BODY>
-    <ul class="menu" >
-        <li class="menu-item"><a href="index.html">Home</a></li>
-        <li class="menu-item"><a href="about.html">About</a></li>
-     <!--   <li class="menu-item"><a href="Activities.html">Activities </a></li>
-        <li class="menu-item"><a href="Accommodations.html">Accommodations</a></li>
-        <li class="menu-item"><a href="Products.html">Products</a></li>  -->
-    </ul> 
-</header>
-    <div>Laura's coaching page</div>
+        <header>
+                <div class="text-center">
+                        <img class ="aboutBanner text-center" src="\images\Coachingcertifiedlogo.jpg" alt="Whole 30">
+                        </div>
+                        <div class="text-center">
+      <ul class="menu" >
+          <li class="menu-item"><a href="index.html">What is Whole30?</a></li>
+          <li class="menu-item"><a href="laura.html">Why work with Laura?</a></li>
+          <li class="menu-item"><a href="coaching.html">Coaching Packages</a></li>
+          <li class="menu-item"><a href="contact.html">Contact</a></li>
+       <!--   <li class="menu-item"><a href="Activities.html">Activities </a></li>
+          <li class="menu-item"><a href="Accommodations.html">Accommodations</a></li>
+          <li class="menu-item"><a href="Products.html">Products</a></li>  -->
+      </ul> 
+      </div>
+    </header>
+    <div>
+<span class="redText">What is the Whole30?  Why should you try this?</span>
+
+    </div>
     <div>Some text here
     </div>  </BODY>
 </body>
