--- a/index.html
+++ b/index.html
@@ -26,12 +26,13 @@
       </div>
     </header>
     <div class="text-center">
-<span class="redText">What is the Whole30?  Why should you try this?</span>
-<span class="quote">Let food by thy medicine – Hippocrates</span>
-<p>
+<span class="redText">What is the Whole30?  Why should you try this?<br/></span>
+<span class="quote">Let food by thy medicine – Hippocrates<br/></span>
+
 <span class="blueText">What is the Whole30?<br/></span>
+<span>
 Certain food groups (like sugar, grains, dairy and legumes) could be having a negative impact on your health and fitness without you even realizing it. Are your energy levels inconsistent or non-existent? Do you have aches and pains that can’t be explained by over-use or injury? Are you having a hard time losing weight no matter how hard you try? Do you have some sort of condition, like skin issues, digestive ailments, seasonal allergies, or chronic pain, that medication hasn’t helped? These symptoms are often directly related to the foods you eat—even the “healthy” stuff. 
-</p>
+</span>
     </div>
     <div>Some text here
     </div>  </BODY>
