--- a/index.html
+++ b/index.html
@@ -34,7 +34,21 @@
 Certain food groups (like sugar, grains, dairy and legumes) could be having a negative impact on your health and fitness without you even realizing it. Are your energy levels inconsistent or non-existent? Do you have aches and pains that can’t be explained by over-use or injury? Are you having a hard time losing weight no matter how hard you try? Do you have some sort of condition, like skin issues, digestive ailments, seasonal allergies, or chronic pain, that medication hasn’t helped? These symptoms are often directly related to the foods you eat—even the “healthy” stuff. 
 </span>
     </div>
-    <div>Some text here
-    </div>  </BODY>
+    <div class="text-center">
+            <span class="redText">So how do you know if (and how) these foods are affecting you?<br/></span>
+                       
+            <span class="blueText">Strip them from your diet completely. </span>
+            <span>
+                    Eliminate the most common craving-inducing, blood sugar disrupting, gut-damaging, inflammatory food groups for a full 30 days. Let your body heal and recover from whatever effects those foods may be causing. Push the reset button with your health, habits, and relationship with food, and the downstream physical and psychological effects of the food choices you’ve been making. Learn how the foods you’ve been eating are actually affecting your day-to-day life, long term health, body composition, and feelings around food. The most important reason to try this?
+                 </span>
+    </div>
+
+    <div class="text-center">
+            <span class="redText">This will change your life.<br/></span>
+           
+                       <span class="quote">- Co-Creator Melissa Hartwig </span>
+    </div>
+
+    </BODY>
 </body>
     </html>
