--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 </head>
 
-<BODY>
+<body>
         <header>
                 <div class="text-center">
                         <img class ="aboutBanner text-center" src="\images\Coachingcertifiedlogo.jpg" alt="Whole 30">
@@ -46,9 +46,12 @@ Certain food groups (like sugar, grains, dairy and legumes) could be having a ne
     <div class="text-center">
             <span class="redText">This will change your life.<br/></span>
            
-                       <span class="quote">- Co-Creator Melissa Hartwig </span>
-    </div>
+                       <span class="quote">- Co-Creator Melissa Hartwig<br/> </span>
 
-    </BODY>
+                       <span>But This sounds hard<br/></span>
+                       <span class="redText">Let me help you<br/></span>
+    </div>
+<div class=text-center">As a Whole30 Certified Coach I will coach you through the 30 days of the Whole30 and show you how to shop for and prepare delicious foods made from meat, poultry, fish, fruits, vegetables, healthy fats and tubers.  After the 30 days I will then guide you through a systematic 10-day period of food reintroduction so you can find out exactly how the foods you have eliminated effect you (and then you decide if you want to make these foods a regular part of your life again).   Think of me as your best friend who has already done a Whole30 and loved it and now wants to spend 30 days helping you!  We are going to go to the grocery store together, we are going to come up with a meal plan together, we are going to meal prep together and of course I’m available for questions or a gentle push whenever you need one.   </div>
+    
 </body>
     </html>
