--- a/index.html
+++ b/index.html
@@ -52,6 +52,13 @@ Certain food groups (like sugar, grains, dairy and legumes) could be having a ne
                        <span class="redText">Let me help you<br/></span>
     </div>
 <div class=text-center">As a Whole30 Certified Coach I will coach you through the 30 days of the Whole30 and show you how to shop for and prepare delicious foods made from meat, poultry, fish, fruits, vegetables, healthy fats and tubers.  After the 30 days I will then guide you through a systematic 10-day period of food reintroduction so you can find out exactly how the foods you have eliminated effect you (and then you decide if you want to make these foods a regular part of your life again).   Think of me as your best friend who has already done a Whole30 and loved it and now wants to spend 30 days helping you!  We are going to go to the grocery store together, we are going to come up with a meal plan together, we are going to meal prep together and of course I’m available for questions or a gentle push whenever you need one.   </div>
-    
+<div class="text-center">These are just a few of the things I hope to help you with during our time together:
+    <ul>
+        <li>Develop new habits regarding nutrition that you will have for the rest of your life</li>
+        <li>Refine techniques for bulk cooking to help make eating nutrient dense foods an every day part of your life</li>
+        <li>Become aware of how the quality of your food affects the way you feel, think, exercise and sleep</li>
+        <li>Become aware of how your food choices can lead to feelings of addiction and cravings and that you do NOT have to eat these foods            </li>
+    </ul>
+</div>    
 </body>
     </html>
