--- a/index.html
+++ b/index.html
@@ -36,11 +36,12 @@ Certain food groups (like sugar, grains, dairy and legumes) could be having a ne
     </div>
     <div class="text-center">
             <span class="redText">So how do you know if (and how) these foods are affecting you?<br/></span>
-                       
+              <div class="testWidth">        
             <span class="blueText">Strip them from your diet completely. </span>
             <span>
                     Eliminate the most common craving-inducing, blood sugar disrupting, gut-damaging, inflammatory food groups for a full 30 days. Let your body heal and recover from whatever effects those foods may be causing. Push the reset button with your health, habits, and relationship with food, and the downstream physical and psychological effects of the food choices you’ve been making. Learn how the foods you’ve been eating are actually affecting your day-to-day life, long term health, body composition, and feelings around food. The most important reason to try this?
                  </span>
+                </div> 
     </div>
 
     <div class="text-center">
