--- a/coaching.html
+++ b/coaching.html
@@ -25,8 +25,8 @@
   </ul> 
   </div>
 </header>
-<div class="bold">Coaching Options</div>
-<div>I currently offer 2 different coaching options</div>
+<div class="testWidth bold">Coaching Options</div>
+<div class="testWidth">I currently offer 2 different coaching options</div>
   <div class="container-fluid">
         <div class="row">
           <div class="col-lg-6">
