--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ Certain food groups (like sugar, grains, dairy and legumes) could be having a ne
 </span>
     </div>
     <div class="text-center">
-            <span class="redText">So how do you know if (and how) these foods are affecting you?<br/></span>
+            <span class="redText bold large">So how do you know if (and how) these foods are affecting you?<br/></span>
               <div class="testWidth">        
             <span class="blueText">Strip them from your diet completely. </span>
             <span>
