--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </header>
     <div class="text-center">
 <span class="redText">What is the Whole30?  Why should you try this?<br/></span>
-<span class="quote">Let food by thy medicine – Hippocrates<br/></span>
+<span class="quote">Let food by thy medicine – Hippocrates<br/><br/></span>
 
 <span class="blueText">What is the Whole30?<br/></span>
 <span class="testWidth">
