--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       </div>
     </header>
     <div class="text-center">
-<span class="redText">What is the Whole30?  Why should you try this?<br/></span>
+<span class="redText bold">What is the Whole30?  Why should you try this?<br/></span>
 <span class="quote">Let food by thy medicine – Hippocrates<br/><br/></span>
 
 <span class="blueText">What is the Whole30?<br/></span>
@@ -45,7 +45,7 @@ Certain food groups (like sugar, grains, dairy and legumes) could be having a ne
     </div>
 
     <div class="text-center">
-            <span class="redText">This will change your life.<br/></span>
+            <span class="redText ">This will change your life.<br/></span>
            
                        <span class="quote">- Co-Creator Melissa Hartwig<br/> </span>
 
